docker re-organized + readme.md edit